# digital-music-transaction

./: .gitignore  README.md  chinook.sqlite  pyproject.toml
.github/workflows/: ci_cd.yml
frontend_service/: package-lock.json  package.json
frontend_service/public/: index.html
frontend_service/src/: App.js
frontend_service/src/components/: Albums.js  AlbumsCreate.js  Wrapper.js
read_service/app/: main.py
read_service/app/api/: routes.py
read_service/app/core/: config.py
read_service/app/db/: database.py  models.py
read_service/app/utils/: cache.py
write_service/app/: main.py
write_service/app/api/: routes.py
write_service/app/core/: config.py
write_service/app/db/: database.py  models.py
write_service/app/utils/: cache.py  validators.py
