[tool.poetry]
name = "digital-music-transaction"
version = "0.1.0"
description = "Microservice backend app using FastAPI"
authors = ["Rudy Hendrawan <rudyhend@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
sqlalchemy = "^2.0.36"
redis = "^4.5.1"
pydantic = "^2.9.2"
databases = {extras = ["sqlite"], version = "^0.9.0"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}
setuptools = "^75.2.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
